--- a/ecommerce/store/templates/navbar.html
+++ b/ecommerce/store/templates/navbar.html
@@ -23,8 +23,9 @@
                 <li><a class="dropdown-item" href="{% url 'category_summary' %}">All Products</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="{% url 'category' 'Shoes' %}">Shoes</a></li>
-                <li><a class="dropdown-item" href="{% url 'category' 'Muslim-Dresses' %}">Muslim Dresses</a></li>
+                <li><a class="dropdown-item" href="{% url 'category' 'Dresses' %}">Dresses</a></li>
                 <li><a class="dropdown-item" href="{% url 'category' 'Bags' %}">Bags</a></li>
+                <li><a class="dropdown-item" href="{% url 'category' 'Sets' %}">Sets</a></li>
             </ul>
         </li>
     </ul>
