Added more cart features

--- a/ecommerce/store/templates/about.html
+++ b/ecommerce/store/templates/about.html
@@ -6,7 +6,7 @@
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">About us...</h1>
+            <h1 class="display-4 fw-bolder">About Us...</h1>
             <p class="lead fw-normal text-white-50 mb-0">Welcome to Salama Boutique</p>
         </div>
     </div>
@@ -19,10 +19,10 @@
 <p align="justify"><b> <h6>
 Wide Range of Modest Muslim Womens Clothing and Accessories at Salama Boutique
 <br/><br/> </b> </h6> 
-Finding modest Muslim women's clothing that is also fashionable and functional can be challenging. But Salama Boutique provides Muslim ladies different options to maintain modesty while looking beautiful. Salama Boutique offers a wide variety of Islamic dress for women to fit different needs. <br/><br/>
-<b>Islamic Clothing</b> - The Fusion of Modesty and Elegance
-Islamic clothing for women encompasses both modesty and fashion. It holds significance within the culture and faith. The manner in which Muslim women choose to wear Muslim dress is a reflection of their reverence for their religion and their aspiration to maintain a sense of modesty. The key garments that form part of Islamic clothing tradition includes the hijab, kaftan, abaya, burka, niqab, jilbab, chador, etc.. Each serving its purpose while also embracing styles. These Islamic outfits not only serve as coverings but also serve as an expression of ones faith and identity. As time has passed Islamic fashion has embraced trends blending tradition with contemporary style.
-<br/><br/> <b><h6>          
+Finding modest Muslim women's clothing that is also fashionable and functional can be challenging...well, Salama Boutique provides Muslim ladies different options to maintain modesty while looking beautiful. Salama Boutique offers a variety of Islamic dress for women to fit different needs. <br/><br/>
+{% comment %} <b>Islamic Clothing</b> - The Fusion of Modesty and Elegance {% endcomment %}
+{% comment %} Islamic clothing for women encompasses both modesty and fashion. It holds significance within the culture and faith. The manner in which Muslim women choose to wear Muslim dress is a reflection of their reverence for their religion and their aspiration to maintain a sense of modesty. The key garments that form part of Islamic clothing tradition includes the hijab, kaftan, abaya, burka, niqab, jilbab, chador, etc.. Each serving its purpose while also embracing styles. These Islamic outfits not only serve as coverings but also serve as an expression of ones faith and identity. As time has passed Islamic fashion has embraced trends blending tradition with contemporary style. {% endcomment %}
+<br/><br/> <b><h6>
 History of Muslim Women's Clothing
 <br/><br/> </b></h6>
 Womens Islamic clothing has a vibrant history that spans over centuries. It is closely intertwined with traditions and values. In the days of Islam, women embraced modesty by wearing an elegant garments that covered their bodies. These Muslim clothing choices were influenced by the teachings of the Quran and Hadith which placed an emphasis on modesty. Over time different regions infused their styles and designs into these garments resulting in a beautiful fusion of religious principles and cultural diversity. Today Muslim dresses for women boasts a tapestry of styles and influences from, across the globe showcasing both tradition and individual expression in stunning harmony.
