--- a/ecommerce/store/templates/home.html
+++ b/ecommerce/store/templates/home.html
@@ -7,7 +7,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <p class="lead fw-normal text-white-50 mb-0"></p>
                 </div>
             </div>
         </header>
@@ -18,8 +18,10 @@
 
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
-                {% for product in products %}
-                <div class="clearfix">
+                
+                
+                    {% for product in products %}
+                {% comment %} <div class="clearfix"> {% endcomment %}
 
                     {%if product.is_sale %}
 
@@ -29,7 +31,7 @@
                             <div class= "badge bg-dark text-white position-absolute"
                             style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
+                            <img class="card-img-top" src="{{ product.image.url }}" height=250px width=550px alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -49,20 +51,22 @@
                         </div>
 
                         <!-- Product.actions-->
-                        <div class=card"text-center">
+                        <div class="card-footer p-4 pt-0 border-top-0 bd-transparent">
+                            <div class="text-center">
                         <a class="btn btn-outline-dark mt-auto"
                         href="{% url 'product' product.id %}">View Product</a
                         ></div>
                      </div>
-                </div>
+                 </div>
             </div>
+
                     {% else %}
                 
 
                 <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
+                            <img class="card-img-top" height=250px width=550px src="{{ product.image.url }}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -76,9 +80,8 @@
                             </div>
 
                             <!-- Product.actions-->
-                            <div class=card"text-center">
-                            <a class="btn btn-outline-dark mt-auto"
-                            href="{% url 'product' product.id %}">View Product</a
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class=card"text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">View Product</a
                             ></div>
                         </div>
                     </div>
