--- a/ecommerce/static/css/styles.css
+++ b/ecommerce/static/css/styles.css
@@ -607,7 +607,7 @@ progress {
   background-color: #fff;
   border: 1px solid var(--bs-border-color);
   border-radius: 0.375rem;
-  max-width: 100%;
+  max-width: 100px;
   height: auto;
 }
 
