--- a/ecommerce/store/templates/product.html
+++ b/ecommerce/store/templates/product.html
@@ -37,8 +37,20 @@
                     ${{ product.price }}
                     
                 {% endif %}
-
                     <br/><br/> 
+                    <div class="row justify-content-center">
+                      <div class="col-md-2">Quantity:</div>
+                      <div class="col-md-2">
+                      <select class='form-select form-select-sm' id="qty-cart">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                      </select>
+                    </div>
+                </div>
+                <br/><br/> 
             
                 <a href="{% url 'home'%}" class="btn btn-secondary">Home</a>
                 <button type="button" value="{{ product.id }}" class="btn btn-secondary" id="add-cart">Add To Cart</button>  
@@ -62,14 +74,14 @@
                     url: '{% url 'cart_add' %}',
                     data: {
                 product_id: $('#add-cart').val(),
-                // product_qty: $('#qty-cart option:selected').text(),
+                product_qty: $('#qty-cart option:selected').text(),
                 csrfmiddlewaretoken: '{{ csrf_token }}',
                 action: 'post'
                     },
             
                     success: function(json){
-                        console.log(json)
-                        // document.getElementById("cart_quantity").textContent = json.qty
+                        // console.log(json)
+                        document.getElementById("cart_quantity").textContent = json.qty
                         // location.reload();
                     },
             
